# sident-rs

./: Cargo.toml  LICENSE  NOTICE  README.md
siacom/: Cargo.toml  README.md
siacom/src/: errors.rs  lib.rs
sident/: Cargo.toml
sident/src/: addr_len.rs  baudrate.rs  card.rs  codec.rs  connection.rs  crc.rs  errors.rs  firmware.rs  lib.rs  macros.rs  ms_mode.rs  packet.rs  product.rs  punch.rs  sys_config.rs  time.rs
sident/src/carddef/: mod.rs  si10.rs  si6.rs  si8.rs  si9.rs  siac.rs
sident/src/packets/: mod.rs
sident/src/packets/hostbound/: get_sicard_res.rs  mod.rs  set_ms_mode_res.rs  si_card_detected.rs  si_card_removed.rs
sident/src/packets/stationbound/: get_sicard.rs  get_system_value.rs  mod.rs  set_baudrate.rs  set_ms_mode.rs
src/: block.rs  card.rs  codec.rs  connection.rs  data_addr_len.rs  errors.rs  firmware.rs  lib.rs  macros.rs  ms_mode.rs  product.rs  protocol_config.rs  punch.rs  sys_config.rs  time.rs
src/carddef/: mod.rs  si10.rs  si8.rs
src/packets/hostbound/: get_sicard_res.rs  get_system_value_res.rs  mod.rs  si_card_detected.rs
src/packets/stationbound/: beep.rs  get_sicard.rs  get_system_value.rs  mod.rs  set_ms_mode.rs
src/protocol/: consts.rs  crc.rs  decoder.rs  encoder.rs  errors.rs  mod.rs  packet.rs  protocol_config.rs  response.rs
src/protocol/base/: b_set_ms_mode.rs  mod.rs
src/protocol/extended/: mod.rs  set_ms_mode.rs
src/protocol/host/: erase_backup_data.rs  get_system_value.rs  mod.rs  set_baudrate.rs  set_ms_mode.rs
src/protocol/station/: get_system_value_response.rs  mod.rs  set_baudrate_response.rs  (+1 more)
