[package]
name = "sident"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.1"
chrono = { version = "0.4.41", features = ["serde"] }
encoding_rs = "0.8.35"
log = "0.4.27"
num_enum = "0.7.4"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde-big-array = "0.5.1"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["time", "io-util"] }
tokio-serial = "5.4.5"
ts-rs = { version = "11.0.1", optional = true, features = ["chrono-impl"] }

[target.'cfg(target_os = "android")'.dependencies]
tokio = { version = "1.46.1", features = ["time", "io-util", "rt-multi-thread"] }
siacom = { version = "0.1.0", path = "../siacom" }

[features]
default = []
serde = ["dep:serde"]
ts-rs = ["serde", "dep:ts-rs"]
